@@ -13,11 +13,7 @@ import java.io.InputStream;
 import java.io.InputStreamReader;
 import java.io.OutputStream;
 import java.io.UnsupportedEncodingException;
-import java.net.HttpURLConnection;
-import java.net.Proxy;
-import java.net.ServerSocket;
-import java.net.URL;
-import java.net.URLEncoder;
+import java.net.*;
 import java.util.Map;
 import java.util.Map.Entry;
 import java.util.concurrent.Executors;
@@ -145,7 +141,8 @@ public class HttpUtil
                     try
                     {
                         byte[] abyte = new byte[4096];
-                        URL url = new URL(packUrl);
+                        URI uri = new URI(packUrl);
+                        URL url = uri.toURL();
                         httpurlconnection = (HttpURLConnection)url.openConnection(p_180192_5_);
                         float f = 0.0F;
                         float f1 = (float)p_180192_2_.entrySet().size();
@@ -253,12 +250,9 @@ public class HttpUtil
                         {
                             InputStream inputstream1 = httpurlconnection.getErrorStream();
 
-                            try
-                            {
-                                HttpUtil.logger.error(IOUtils.toString(inputstream1));
-                            }
-                            catch (IOException ioexception)
-                            {
+                            try {
+                                HttpUtil.logger.error(IOUtils.toString(new InputStreamReader(inputstream1)));
+                            } catch (IOException ioexception) {
                                 ioexception.printStackTrace();
                             }
                         }
